cmake_minimum_required(VERSION 2.8.8)
PROJECT(scenecontrol_core)

# Install server certificate
file(GLOB GENERICCERTS "${CMAKE_CURRENT_SOURCE_DIR}/certificates/*.key" "${CMAKE_CURRENT_SOURCE_DIR}/certificates/*.crt")
INSTALL(FILES ${GENERICCERTS} DESTINATION ${CONFIG_SERVER_CERTPATH} COMPONENT Server)

INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION "${LIBPATH}" COMPONENT Server
USE_SOURCE_PERMISSIONS
PATTERN "certificates" EXCLUDE
PATTERN "node_modules" EXCLUDE
PATTERN "test" EXCLUDE
)


execute_process(COMMAND npm install
WORKING_DIRECTORY "${LIBPATH}/core"
OUTPUT_VARIABLE DIST OUTPUT_STRIP_TRAILING_WHITESPACE)