cmake_minimum_required(VERSION 2.8.8)
PROJECT(scenecontrol_core)

# Install server certificate
file(GLOB GENERICCERTS "${CMAKE_CURRENT_SOURCE_DIR}/certificates/*.key" "${CMAKE_CURRENT_SOURCE_DIR}/certificates/*.crt")
INSTALL(FILES ${GENERICCERTS} DESTINATION ${CONFIG_SERVER_CERTPATH} COMPONENT Server)

# Install js files
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION "${LIBPATH}" COMPONENT Server
USE_SOURCE_PERMISSIONS
PATTERN "certificates" EXCLUDE
PATTERN "node_modules" EXCLUDE
PATTERN "test" EXCLUDE
PATTERN "config.js.in" EXCLUDE
)

# Create config file
SET(CONFIG_SERVER_DATABASENAME "testdb")
SET(CONFIG_SERVEREXECUTABLE "${NODEEXEC} ${CMAKE_INSTALL_PREFIX}/${LIBPATH}/core/main.js")
configure_file(config.js.in config.js @ONLY IMMEDIATE)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/config.js DESTINATION ${LIBPATH}/core COMPONENT Server)

# execute npm to install node js app dependencies
INSTALL(CODE "MESSAGE(Execute in \"${CMAKE_INSTALL_PREFIX}/${LIBPATH}/core\")")

INSTALL(CODE "execute_process(COMMAND npm install
WORKING_DIRECTORY \"${CMAKE_INSTALL_PREFIX}/${LIBPATH}/core\"
OUTPUT_VARIABLE DIST OUTPUT_STRIP_TRAILING_WHITESPACE)")