cmake_minimum_required(VERSION 2.8)
project(libdatastorage)
file(GLOB SRCS_DATABASE_H *.h)
file(GLOB SRCS_DATABASE *.cpp)
SET(SRCS_DATABASE_H ${SRCS_DATABASE_H} PARENT_SCOPE)
SET(SRCS_DATABASE ${SRCS_DATABASE} PARENT_SCOPE)
set (LIBDATABASEDIR "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)

FILE(GLOB SRCS "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
FILE(GLOB SRCS_H "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
QT4_WRAP_CPP(SRCS_MOCS ${SRCS_H})
add_library(${PROJECT_NAME} STATIC ${SRCS} ${SRCS_MOCS} ${SRCS_SHARED_JSON} ${SRCS_SHARED_PLUGINS} ${SRCS_SHARED_PLUGINS_MOCS})
target_link_libraries(${PROJECT_NAME} ${QT_QTCORE_LIBRARY})

