cmake_minimum_required(VERSION 2.8)
project(libdatastorage)

file(GLOB SRCS_DATABASE_H *.h)
file(GLOB SRCS_DATABASE *.cpp)
SET(SRCS_DATABASE_H ${SRCS_DATABASE_H} PARENT_SCOPE)
SET(SRCS_DATABASE ${SRCS_DATABASE} PARENT_SCOPE)
set (LIBDATABASEDIR "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)

FILE(GLOB SRCS "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
FILE(GLOB SRCS_H "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
QT4_WRAP_CPP(SRCS_MOCS ${SRCS_H})

include_directories(${QT_INCLUDES} ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_BINARY_DIR})
ADD_DEFINITIONS(-D_GNU_SOURCE -Wall -W -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII -DQT_USE_FAST_OPERATOR_PLUS -DQT_USE_FAST_CONCATENATION ${QT_DEFINITIONS})

add_library(${PROJECT_NAME} STATIC ${SRCS} ${SRCS_MOCS} ${SRCS_SHARED_JSON})
target_link_libraries(${PROJECT_NAME} ${QT_QTCORE_LIBRARY})

