PROJECT(roommedia)
cmake_minimum_required(VERSION 2.6)

set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
find_package(GStreamer REQUIRED)

IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  SET(CMAKE_INSTALL_PREFIX
    "/usr" CACHE PATH "RoomMedia install prefix" FORCE
    )
ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)

# set default build type
IF (NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING "Build Type")
  SET(CMAKE_CONFIGURATION_TYPES RelWithDebInfo Release Debug CACHE STRING "")
ENDIF (NOT CMAKE_BUILD_TYPE)

include_directories(${GSTREAMER_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
ADD_DEFINITIONS(-Wall -W ${GSTREAMER_DEFINITIONS})
ADD_EXECUTABLE(roommedia main.cpp)
target_link_libraries(roommedia ${GSTREAMER_LIBRARIES} ${GSTREAMER_BASE_LIBRARY} ${GSTREAMER_INTERFACE_LIBRARY})

INSTALL(TARGETS roommedia DESTINATION bin CONFIGURATIONS Debug Release RelWithDebInfo)
