cmake_minimum_required(VERSION 2.8.8)

#Only allow this file to be included by the root cmake file
IF (NOT DEFINED PRODUCTID)
	RETURN()
ENDIF()

project(websocketproxy)

find_package(OpenSSL QUIET)
IF (NOT OPENSSL_FOUND)
	MESSAGE("Not building: WebsocketProxy (OpenSSL)")
	RETURN()
ENDIF()

OPTION(BUILD_WEBSOCKETPROXY "Build WebsocketProxy" ON)
IF (NOT BUILD_WEBSOCKETPROXY)
  RETURN()
ENDIF()

include_directories(${QT_INCLUDES} ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_BINARY_DIR})
ADD_DEFINITIONS(-D_GNU_SOURCE -Wall -W  -DQT_NO_CAST_TO_ASCII -DQT_USE_FAST_OPERATOR_PLUS -DQT_USE_FAST_CONCATENATION ${QT_DEFINITIONS})
#-DQT_NO_CAST_FROM_ASCII

file(GLOB SRCS_H *.h)
file(GLOB SRCS *.cpp)

QT_WRAP_CPP(${PROJECT_NAME} SRCS_MOCS ${SRCS_H})

add_executable(${PROJECT_NAME} ${SRCS} ${SRCS_MOCS} $<TARGET_OBJECTS:jsonDocumentsLib> $<TARGET_OBJECTS:utilsLib>)

target_link_libraries(${PROJECT_NAME}
${QT_QTCORE_LIBRARY} ${QT_QTNETWORK_LIBRARIES}
${QT_QTTEST_LIBRARIES} ${OPENSSL_LIBRARIES})

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin COMPONENT Server)
GET_TARGET_PROPERTY(BINARY_NAME ${PROJECT_NAME} OUTPUT_NAME)
SET(CPACK_PACKAGE_EXECUTABLES ${CPACK_PACKAGE_EXECUTABLES} ${PROJECT_NAME} CACHE INTERNAL "")

# SSL Certificates are shared with the server and not installed by the proxy
#INSTALL(DIRECTORY "certificates/" DESTINATION ${CONFIG_SERVER_CERTPATH} COMPONENT Server)
