cmake_minimum_required(VERSION 2.6)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/../cmake/")
find_package(RoomServerPlugins REQUIRED)

SET(CONFIG_${PROJECT_NAME}_SERVERS "127.0.0.1" CACHE STRING "Servers")
SET(CONFIG_${PROJECT_NAME}_PORT "1750" CACHE STRING "Port")
configure_file(configplugin.h.in configplugin.h @ONLY)

SET(DEBFOUND TRUE)
IF (DEBFOUND)
	OPTION(PLUGIN_${PROJECT_NAME}_CLIENT "Plugin ${PROJECT_NAME} Client" ON)
	OPTION(PLUGIN_${PROJECT_NAME}_SERVER "Plugin ${PROJECT_NAME} Server" ON)

	IF (PLUGIN_${PROJECT_NAME}_CLIENT)
		build_client_lib()
		target_link_libraries(${PROJECT_NAME}_client ${QT_QTCORE_LIBRARY})
		install_client_lib()
	ENDIF()
	IF (PLUGIN_${PROJECT_NAME}_CLIENT)
		build_server_lib()
		target_link_libraries(${PROJECT_NAME}_server ${QT_QTCORE_LIBRARY} ${QT_QTNETWORK_LIBRARIES})
		install_server_lib()
	ENDIF()
ELSE()
	MESSAGE("Not building: ${PROJECT_NAME}")
ENDIF()
add_subdirectory(roomvideohelper)

