cmake_minimum_required(VERSION 2.6)
find_package(RoomPlugins REQUIRED)
LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
find_package(PCSC QUIET)

SET(DEBFOUND ${PCSC_FOUND})
IF (DEBFOUND)
	OPTION(PLUGIN_${PROJECT_NAME} "Plugin  ${PROJECT_NAME} Server" ON)
	IF (PLUGIN_${PROJECT_NAME})
		include_directories(${PCSC_INCLUDE_DIRS})
		build_server_lib()
		target_link_libraries(${PROJECT_NAME}_server ${QT_QTCORE_LIBRARY} ${QT_QTNETWORK_LIBRARIES} ${PCSC_LIBRARIES})
		install_server_lib()
	ENDIF()
ELSE()
	MESSAGE("Not building: ${PROJECT_NAME}")
ENDIF()
