cmake_minimum_required(VERSION 2.6)
find_package(RoomPlugins REQUIRED)

SET(DEBFOUND TRUE)
IF (DEBFOUND)
	OPTION(PLUGIN_${PROJECT_NAME}_SERVER "Plugin ${PROJECT_NAME} Server" ON)
	IF (PLUGIN_${PROJECT_NAME}_SERVER)
		SET(ADD_CPP "${SHAREDDIR}/categorize/profile.cpp")
		SET(ADD_H "${SHAREDDIR}/categorize/profile.h")
		build_server_lib()
		target_link_libraries(${PROJECT_NAME}_server ${QT_QTCORE_LIBRARY} ${QT_QTNETWORK_LIBRARIES})
		install_server_lib()
	ENDIF()
ELSE()
	MESSAGE("Not building: ${PROJECT_NAME}")
ENDIF()
