cmake_minimum_required(VERSION 2.6)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/../cmake/")
find_package(RoomServerPlugins REQUIRED)

SET(CONFIG_${PROJECT_NAME}_AUTOCONFIG "1075:1077:netz:netz" CACHE STRING "Autoconfiguation NET-PwrCtrl (send port:listen port:user:pwd")
SET(CONFIG_AUTOCONFIG ${CONFIG_${PROJECT_NAME}_AUTOCONFIG})
configure_file(configplugin.h.in configplugin.h @ONLY)

SET(DEBFOUND TRUE)
IF (DEBFOUND)
	OPTION(PLUGIN_${PROJECT_NAME}_CLIENT "Plugin ${PROJECT_NAME} Client" ON)
	OPTION(PLUGIN_${PROJECT_NAME}_SERVER "Plugin ${PROJECT_NAME} Server" ON)

	IF (PLUGIN_${PROJECT_NAME}_CLIENT)
		build_client_lib()
		target_link_libraries(${PROJECT_NAME}_client ${QT_QTCORE_LIBRARY})
		install_client_lib()
	ENDIF()
	IF (PLUGIN_${PROJECT_NAME}_SERVER)
		build_server_lib()
		target_link_libraries(${PROJECT_NAME}_server ${QT_QTCORE_LIBRARY} ${QT_QTNETWORK_LIBRARIES})
		install_server_lib()
	ENDIF()
ELSE()
	MESSAGE("Not building: ${PROJECT_NAME}")
ENDIF()
