cmake_minimum_required(VERSION 2.6)
find_package(RoomPlugins REQUIRED)

SET(DEBFOUND TRUE)
IF (WIN32)
	SET(DEBFOUND FALSE)
ENDIF()

SET(CONFIG_${PROJECT_NAME}_REPEAT_INIT "500" CACHE INT "Repeat initial delay in ms")
SET(CONFIG_${PROJECT_NAME}_REPEAT "300" CACHE INT "Repeat tick every x ms")
SET(CONFIG_REPEAT_INIT ${CONFIG_${PROJECT_NAME}_REPEAT_INIT})
SET(CONFIG_REPEAT ${CONFIG_${PROJECT_NAME}_REPEAT})
configure_file(configplugin.h.in configplugin.h @ONLY)

IF (DEBFOUND)
	OPTION(PLUGIN_${PROJECT_NAME}_SERVER "Plugin ${PROJECT_NAME} Server" ON)

	IF (PLUGIN_${PROJECT_NAME}_SERVER)
		build_server_lib()
		target_link_libraries(${PROJECT_NAME}_server ${QT_QTCORE_LIBRARY} ${QT_QTNETWORK_LIBRARIES} ${QT_QTDBUS_LIBRARIES})
		install_server_lib()
	ENDIF()
ELSE()
	MESSAGE("Not building: ${PROJECT_NAME}")
ENDIF()
