cmake_minimum_required(VERSION 2.6)
find_package(RoomPlugins REQUIRED)
LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
find_package(PulseAudio QUIET)
find_package(GLIB2 QUIET)

IF (PULSEAUDIO_FOUND AND GLIB2_FOUND)
	OPTION(PLUGIN_${PROJECT_NAME} "Plugin  ${PROJECT_NAME} Server" ON)

	IF (PLUGIN_${PROJECT_NAME})
		build_server_lib()
		include_directories(${PULSEAUDIO_INCLUDE_DIR} ${GLIB2_INCLUDE_DIRS})
		target_link_libraries(${PROJECT_NAME}_server ${QT_QTCORE_LIBRARY} ${QT_QTNETWORK_LIBRARIES} ${GLIB2_LIBRARIES} ${PULSEAUDIO_LIBRARY} ${PULSEAUDIO_MAINLOOP_LIBRARY})
		install_server_lib()
	ENDIF()
ELSE()
	MESSAGE("Not building: ${PROJECT_NAME}")
ENDIF()
